--- a/deploy/ansible/roles/vtiger6-install/vars/vtiger6.yml
+++ b/deploy/ansible/roles/vtiger6-install/vars/vtiger6.yml
@@ -1,6 +1,6 @@
 # vTiger installation
 vtiger_db_user: vtiger6
-vtiger_db_password: "{{ lookup('password', '/etc/ansible/vtiger6_db_password length=12') }}"
+vtiger_db_password: vtiger6
 vtiger_db_name: vtiger6
 vtiger_root_path: /var/lib/vtigercrm/webapp/
 
