--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -8,7 +8,7 @@ ADD ansible /etc/ansible
 WORKDIR /etc/ansible
 
 # Install Vtiger
-RUN ansible-playbook -vvv -i hosts site.yml --skip-tags "skip-install"
+RUN ansible-playbook -vvv -i hosts site.yml --extra-vars "skip_generate_password=True"
 
 # Map Vtiger mutable volumes
 VOLUME ["/etc/mysql", "/var/lib/mysql", "/etc/apache2", "/etc/php5", "/var/log/apache2", "/var/log/mysql", "/var/lib/vtigercrm"]
